[gd_scene load_steps=7 format=3 uid="uid://buhjueo74jc01"]

[ext_resource type="Script" path="res://HUD.gd" id="1_t13i2"]
[ext_resource type="FontFile" uid="uid://bowy0c3xnbrle" path="res://fonts/Xolonium-Regular.ttf" id="2_7ppps"]
[ext_resource type="Texture2D" uid="uid://bfke1tkn86def" path="res://art/leaderboardIcon.png" id="3_w5yvb"]
[ext_resource type="Script" path="res://LeaderboardButton.gd" id="4_r4mio"]

[sub_resource type="InputEventAction" id="InputEventAction_n3goh"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_mcr2h"]
events = [SubResource("InputEventAction_n3goh")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_t13i2")

[node name="LeaderboardButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_bottom = 64.0
grow_horizontal = 0
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
action_mode = 0
icon = ExtResource("3_w5yvb")
flat = true
expand_icon = true
script = ExtResource("4_r4mio")

[node name="LeaderboardPopup" type="CanvasLayer" parent="LeaderboardButton"]
layer = 2
visible = false

[node name="ColorRect" type="ColorRect" parent="LeaderboardButton/LeaderboardPopup"]
top_level = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -280.0
offset_right = 160.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.682353, 0.486275, 0.811765, 0.701961)

[node name="ItemList" type="ItemList" parent="LeaderboardButton/LeaderboardPopup/ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_7ppps")
theme_override_font_sizes/font_size = 26
item_count = 4
max_columns = 2
item_0/text = "Name"
item_1/text = "Score"
item_2/text = "Dana"
item_3/text = "124"

[node name="Label" type="Label" parent="LeaderboardButton/LeaderboardPopup/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_7ppps")
theme_override_font_sizes/font_size = 32
text = "str(node_data)"

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -16.0
offset_right = 29.0
offset_bottom = 78.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_7ppps")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -120.0
offset_right = 240.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_7ppps")
theme_override_font_sizes/font_size = 64
text = "Dodge the Creeps!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="PlayerName" type="LineEdit" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -33.531
offset_top = -220.0
offset_right = 33.5315
offset_bottom = -189.0
grow_horizontal = 2
grow_vertical = 0

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -140.0
offset_right = 104.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_7ppps")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_mcr2h")
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="save_game" from="." to="LeaderboardButton" method="_on_save_game"]
[connection signal="update_leaderboard" from="." to="LeaderboardButton" method="_on_update_leaderboard"]
[connection signal="toggled" from="LeaderboardButton" to="LeaderboardButton" method="_on_toggled"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
